
	* libtinymail-camel/tny-camel-send-queue.c,
	libtinymail-camel/tny-camel-send-queue-priv.h: if queue is
	running when we cancel, then we request cancel to be done by
	the send queue thread.

2009-03-30  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/camel-lite/camel/camel-mime-utils.c
	(camel_header_address_decode): also consider semi-colon
	for reading split addresses.

2009-03-24  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.[ch]: added
	activity feedback, to allow developers to know when the
	list store is fetching data (to show some kind of progress
	feedback).

2009-03-24  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/camel-lite/camel/providers/pop3/camel-pop3-folder.c
	(pop3_sync): properly remove files from cache when they're marked
	as deleted.

2009-03-18  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-send-queue.c: fix
	bad usage of GSlice that could cause crashes.

2009-03-17  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c (get_folders_cb): 
	get the folders of the model using asynchronous calls

2009-03-13  Jose Dapena Paz  <jdapena@igalia.com>

	* Fix for previous "refresh" commit.

2009-03-11  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-store-account.c: now
	get_folders "refresh" parameter forces to fetch again
	the list of folders. This way we can acknowledge when
	there are new folders available on server.

2009-03-06  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-session-camel.c
	(tny_session_queue_going_online_for_account):
	set the session to online before trying to connect the
	account. Otherwise the connection won't success

2009-03-02  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c
	(_tny_camel_folder_guess_folder_type): Improved detection of
	folders called 'inbox'. If the parent is not an account then it's